<resources>
    <string name="app_name">courier_application</string>
    <string name="title_available_orders">Available orders</string>
    <string name="title_profile">Profile</string>
    <string name="title_details">Details</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="shared_prefs_cookies">Cookies</string>
    <string name="fragment_splash">fragment_splash</string>
    <string name="logout">Log out</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="num_hint">171234567</string>
    <string name="available_orders">Available orders</string>
    <string name="active_orders">Active Orders</string>
    <string name="details">Details</string>
    <string name="accept">Accept</string>
    <string name="arrow"><![CDATA[->]]></string>
    <string name="call">Call</string>
    <string name="show_on_map">Show on map</string>
    <string name="amount">Amount</string>
    <string name="info">Info</string>
    <string name="price">Price</string>
    <string name="delivering">Delivering</string>
    <string name="ordered">Ordered</string>
    <string name="profile_info">Profile info</string>
    <string name="statistics">Statistics</string>
</resources>